deploy-hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
        name: hello
spec:
        replicas: 2
        selector:
                matchLabels:
                        app: hello
        template:
                metadata:
                        labels:
                                app: hello
                spec:
                        containers:
                                 - name: hello
                                   image: darkjedidj/hello:latest
                                   ports:
                                           - containerPort: 3001
                                             protocol: TCP
