service-hello.yaml
apiVersion: v1
kind: Service
metadata:
        name: hello-service
        namespace: default
spec:
        selector:
                app: hello
        ports:
                - port: 80
                  targetPort: 3001
                  protocol: TCP
