ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
        name: web
        namespace: default
        annotations:
                nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
        rules:
                - http:
                        paths:
                                - path: "/hello"
                                  pathType: Prefix
                                  backend:
                                          service:
                                                  name: hello-service
                                                  port: 
                                                        number: 80
                                - path: "/bye"
                                  pathType: Prefix
                                  backend:
                                          service:
                                                name: bye-service
                                                port:
                                                        number: 80
